// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonSideMenu mapStateToProps should provide the necessary props 1`] = `
Object {
  "contactAssignment": Object {
    "id": 3,
    "type": "reverse_contact_assignment",
  },
  "isJean": true,
  "isMissionhubUser": false,
  "myId": "1",
  "orgPermission": Object {
    "followup_status": "uncontacted",
    "id": 4,
    "type": "organizational_permission",
  },
  "organization": Object {
    "id": 1,
    "type": "organization",
  },
  "person": Object {
    "first_name": "Test Fname",
    "id": 2,
    "type": "person",
  },
  "personIsCurrentUser": false,
}
`;

exports[`PersonSideMenu renders assign correctly 1`] = `
<Connect(SideMenu)
  menuItems={
    Array [
      Object {
        "action": [Function],
        "label": "Edit",
      },
      Object {
        "action": [Function],
        "label": "Assign",
      },
    ]
  }
/>
`;

exports[`PersonSideMenu renders unassign correctly 1`] = `
<Connect(SideMenu)
  menuItems={
    Array [
      Object {
        "action": [Function],
        "label": "Edit",
      },
      Object {
        "action": [Function],
        "label": "Unassign",
      },
    ]
  }
/>
`;
